--- a/atividadeEntrega.ipynb
+++ b/atividadeEntrega.ipynb
@@ -26,12 +26,12 @@
       ],
       "metadata": {
         "id": "m6UUoYPrcTuj",
-        "outputId": "bae8632e-0e81-40b5-ff27-c6bc82d39ab1",
+        "outputId": "5c7b5f69-e6d9-4b0f-d9e4-92e60d3527ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "CVtTkkVRctr5"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
           "height": 1000
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "Weff-6f_dxZu"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -360,7 +360,6 @@
         "sapply(loanNA, function(x) sum(is.na(x)))"
       ],
       "metadata": {
-        "collapsed": true,
         "id": "n8vbGR6md1I-",
         "outputId": "f5bea5e7-4254-4c34-91df-88ca319cb6a7",
         "colab": {
@@ -368,7 +367,7 @@
           "height": 52
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -403,20 +402,25 @@
       "source": [
         "cor(loanNA$ApplicantIncome, loanNA$CoapplicantIncome)\n",
         "cor(loanNA$ApplicantIncome, loanNA$Credit_History)\n",
+        "cor(loanNA$ApplicantIncome, loanNA$Loan_Amount_Term)\n",
+        "\n",
         "cor(loanNA$CoapplicantIncome, loanNA$Credit_History)\n",
         "cor(loanNA$CoapplicantIncome, loanNA$ApplicantIncome)\n",
+        "cor(loanNA$CoapplicantIncome, loanNA$Loan_Amount_Term)\n",
+        "\n",
         "cor(loanNA$Credit_History, loanNA$CoapplicantIncome)\n",
-        "cor(loanNA$Credit_History, loanNA$ApplicantIncome)"
+        "cor(loanNA$Credit_History, loanNA$ApplicantIncome)\n",
+        "cor(loanNA$Credit_History, loanNA$Loan_Amount_Term)"
       ],
       "metadata": {
         "id": "3C8O4uO0eAT7",
-        "outputId": "00a6da8c-2778-48d4-d1e8-eb0b846c79a6",
+        "outputId": "9cd03f77-85a8-4224-bd94-6f9afc334067",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 173
         }
       },
-      "execution_count": 28,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,6 +454,20 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
+              "-0.0628610526849631"
+            ],
+            "text/markdown": "-0.0628610526849631",
+            "text/latex": "-0.0628610526849631",
+            "text/plain": [
+              "[1] -0.06286105"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
               "-0.0108471424889266"
             ],
             "text/markdown": "-0.0108471424889266",
@@ -470,6 +488,20 @@
             "text/latex": "-0.122630580659554",
             "text/plain": [
               "[1] -0.1226306"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "-0.000289520584845797"
+            ],
+            "text/markdown": "-0.000289520584845797",
+            "text/latex": "-0.000289520584845797",
+            "text/plain": [
+              "[1] -0.0002895206"
             ]
           },
           "metadata": {}
@@ -501,6 +533,20 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "0.00865752964426554"
+            ],
+            "text/markdown": "0.00865752964426554",
+            "text/latex": "0.00865752964426554",
+            "text/plain": [
+              "[1] 0.00865753"
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
@@ -508,10 +554,30 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GNqQkXZkfSZj"
+        "id": "GNqQkXZkfSZj",
+        "outputId": "dda1652e-2863-49e5-beda-427c44b1c5d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "0.00865752964426554"
+            ],
+            "text/markdown": "0.00865752964426554",
+            "text/latex": "0.00865752964426554",
+            "text/plain": [
+              "[1] 0.00865753"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ],
   "metadata": {
